# FactAnchor

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  start.sh  test_api.py  worker_logs.txt
backend/: alembic.ini  pyproject.toml  worker_entry.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_widen_confidence_hash.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  claims.py  health.py  reports.py
backend/app/api/ws/: verification.py
backend/app/auth/: __init__.py  jwt.py  middleware.py
backend/app/db/: __init__.py  models.py  repositories.py  session.py
backend/app/nlp/: __init__.py  classifiers.py  extractor.py  models.py  pipeline.py
backend/app/schemas/: __init__.py  claim.py  report.py  verification.py
backend/app/verification/: __init__.py  confidence.py  reconciler.py  sql_verifier.py  vector_verifier.py
backend/app/workers/: celery_app.py  signals.py  tasks.py
backend/scripts/: create_test_user.py  golden_demo.py  seed_pinecone.py  verified_facts.json
backend/seeds/: demo_user.py  financial_data.sql
backend/tests/: conftest.py
backend/tests/integration/: test_reports_api.py
backend/tests/unit/: test_confidence.py  test_extractor.py  test_sql_verifier.py  test_vector_verifier.py
demo/: sample_report.txt
docker/: api.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: file_tree.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+41 files in other folders)
